--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-DB_USER=postgres
+DB_USERNAME=postgres
 DB_HOST=localhost
-DB_DATABASE=Tenttikanta
-DB_PASSWORD=postgres
-DB_PORT=5432
+DB_NAME=Tenttikanta
+DB_PASSWORD=MAVLtd
+DB_PORT = 5432
 
 JWT_SECRET=d85A_k4jjt7.fk4l5k6-9a3
