--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-localization": "^1.0.15",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-syntax-highlighter": "^15.4.3",
     "react-uuid": "^1.0.2",
     "socket.io": "^3.1.0",
     "socket.io-client": "^3.1.0",
