--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.5.1",
+    "sharp": "^0.27.2",
     "socket.io": "^3.1.2",
     "ws": "^7.4.4"
   },
